--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "herbolario-vida---natural-wellness-store",
+  "name": "herbéra---natural-wellness",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,8 @@
     "react-router-dom": "^7.10.1",
     "@google/genai": "^1.33.0",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0"
+    "lucide-react": "^0.561.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
